[package]
name = "gotham-engine"
version = "1.0.0"

edition = "2021"

[lib]
name = "backbone"
path = "src/lib.rs"

#[[bin]]
#name = "public"
#path = "src/public/main.rs"

[dependencies]
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
config.workspace = true
uuid.workspace = true
failure.workspace = true
jsonwebtoken.workspace = true
hex.workspace = true
two-party-ecdsa.workspace = true
kms.workspace = true
rocksdb = { version = "0.21.0", optional = true }
chrono = "0.4.26"
cargo-pants = "0.4.16"
redis = { version = "0.23.0", features = [ "cluster"] }
thiserror = "1.0"
erased-serde = "0.3"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }

[features]
default = ["local", "aws"]
local = ["rocksdb"]

[dev-dependencies]
time-test = "0.2.1"
floating-duration.workspace = true
